Steps Quiz: Fixed wrapping issue on x-small viewport

--- a/méli-mélo/2024-04-stepsquiz/stepsquiz.css
+++ b/méli-mélo/2024-04-stepsquiz/stepsquiz.css
@@ -9,8 +9,7 @@
 }
 
 /* Customisation for the progress bar and text */
-.provisional.wb-steps.quiz progress.progressBar,
-.provisional.wb-steps.quiz label {
+.provisional.wb-steps.quiz progress.progressBar {
 	/*-webkit-appearance: progress-bar;*/
 	width: 100%;
 }
